Fixed but in styles.css that made images too wide

--- a/postmortem/styles.css
+++ b/postmortem/styles.css
@@ -8,7 +8,7 @@ body {
 img {
   width: 100%;
   height: auto;
+  max-width: 1000px;
 }
 
 .clear-floated    { clear: both; height: 1px; font-size: 1px; line-height: 1px; padding: 0; margin: 0; }
-
